pkl-core/src/test/files/LanguageSnippetTests/input/errors/const/constSuper.pkl
open class A {
  bar = 5
}

class B extends A {
  const foo = super.bar
}

b: B
